--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,6 @@ services:
    image: dfossouo/cloudera-edge:5.9.0
    networks:
       - cloudera-network
-   command: bash
+   command: [hadoop fs -mkdir /cities,hadoop fs -put cities.csv /cities,hadoop jar /usr/lib/hadoop-mapreduce/hadoop-mapreduce-examples.jar wordcount /cities/cities.csv /wordcount]
 networks:
  cloudera-network:
