--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,9 @@ services:
    networks:
       - cloudera-network
  cloudera-edge:
-   image: dfossouo/cloudera-edge:5.9.0
+   image: dfossouo/cloudera-edge-test:5.9.0
    networks:
       - cloudera-network
-   command: [hadoop fs -mkdir /cities,hadoop fs -put cities.csv /cities,hadoop jar /usr/lib/hadoop-mapreduce/hadoop-mapreduce-examples.jar wordcount /cities/cities.csv /wordcount]
+#   command: [hadoop fs -mkdir /cities,hadoop fs -put cities.csv /cities,hadoop jar /usr/lib/hadoop-mapreduce/hadoop-mapreduce-examples.jar wordcount /cities/cities.csv /wordcount]
 networks:
  cloudera-network:
